--- a/frontend/src/app/protected/client-dashboard/client-dashboard.html
+++ b/frontend/src/app/protected/client-dashboard/client-dashboard.html
@@ -6,6 +6,10 @@
     <button mat-icon-button class="avatar-btn">
       <mat-icon class="large-icon">account_circle</mat-icon>
     </button>
+    <button mat-menu-item (click)="logout()">
+      <mat-icon style="color: #000000;">logout</mat-icon>
+      <span style="color: #000000;">Cerrar Sesión</span>
+    </button>
   </header>
 
   <main class="grid-layout">
